2006-04-22  Brent Smith  <gnome@nextreality.net>

	* configure.in:
	Fix an issue with auto detect search not setting YELP_SEARCH_CFLAGS
	and YELP_SEARCH_LIBS correctly.
	* src/yelp-toc-pager.c: (get_omf_attributes),
	(create_toc_from_omf_cache_file), (process_omf_pending),
	(process_mandir_pending):
	Fix a crash in create_toc_from_omf_cache_file() when the url element 
	is not present in the omfindex.xml file.
	Fix a crash in process_omf_pending() when the omf file is unable to be 
	opened in get_omf_attributes()
	Refactor some of the man page cache code to reduce nesting

2006-04-20  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	* src/Makefile.am:
	* src/yelp-gecko-utils.cpp:

	Build with xulrunner trunk (gecko 1.9). Bug #329429.

	* m4/gecko.m4:

	Re-sync with Epiphany.

2006-04-19  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/Makefile.am: 
	* src/yelp-html.h: 
	* src/yelp-html.cpp: 
	* src/yelp-gecko-utils.cpp: 
	* src/yelp-gecko-utils.h: 
	* src/yelp-main.c: 
	Change font size for all locales (from Christian Persch)
	Fixes #165678
	
	* configure.in: 
	Clean up configure.in a bit
	Fixes #337437

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2006-04-04  Brent Smith  <gnome@nextreality.net>

	* src/yelp-toc-pager.c: (xslt_yelp_document):
	cosmetic changes (put statements on one line where possible)
	* src/yelp-window.c: (window_do_load):
	Make the "About this Document" menu entry available after loading a
	DocBook XML file, since that is the only time it is relevant.

2006-04-04  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	Strip leading and training spaces from search terms
	Fixes #334568
	
2006-04-03  Brent Smith  <gnome@nextreality.net>

	* src/yelp-db-print-pager.c: (db_print_pager_dispose):
	* src/yelp-main.c: (slowly_and_stupidly_obtain_timestamp):
	* src/yelp-man-parser.c:
	* src/yelp-toc-pager.c: (process_mandir_pending),