@@ -307,7 +307,6 @@ yelp-$VERSION:
 	Debug enabled:            ${enable_debug}
 	Man Pages enabled:        ${enable_man}
 	Info Pages enabled:       ${enable_info}
-	Beagle available:         ${have_beagle}
 	Search backend:           ${search_backend}
 	Mozilla version:          ${MOZILLA}
 "
